# HealthLabel

./: .gitignore  README.md  app.py  barcode_utils.py  crew_setup.py  history_manager.py  main.py  medical_rules.py  normalization.py  nutri_score.json  pyproject.toml  settings_manager.py  test_barcode_lookup.py
data/: README.md  product_history.json
prompts/: data_analysis_prompt.txt  image_analysis_prompt.txt
src/backend/: langgraph_processor.py  llm_processor.py  nutri_score.py  product_processor.py
src/frontend/: app.py  app_implementation.py  enhanced_ui.py
src/frontend/assets/: custom.css
src/utils/: barcode_detector.py  enhanced_data.py  i18n.py
